--- a/SASS/layout/_header.scss
+++ b/SASS/layout/_header.scss
@@ -24,6 +24,7 @@ header{
                         position: fixed;
                         top: 0.5rem;
                         right: 1rem;
+                        z-index: 2;
                     }
                 }
             }
