--- a/SASS/responsive/_phone.scss
+++ b/SASS/responsive/_phone.scss
@@ -1,7 +1,8 @@
 //phone
 @media (max-width: 768px) {
+    
     header{
-        width: 455px;
+        width: 425px;
         nav{
             .panel_header{
                 .company_logo{
@@ -10,10 +11,95 @@
                     margin-top: 0.5rem;
                 }
                 .shopCart_logo{
-                    width: 20px;
-                    height: 20px;
+                    width: 30px;
+                    height: 30px;
+                    margin-top: 0.5rem;
+                }
+                .menu_header{
+                    li{
+                        a{
+                            font-size: 0.8rem;
+                        }
+                    }
                 }
             }
+        }
+    }
+    .frame_video{
+        width: 425px;
+        margin: 2rem 0rem 0rem 0rem;
+        iframe{
+            width: 400px;
+        }
+    }
+    .sign_txt{
+        font-size: 0.5rem;
+    }
+    .exhibitor{
+        grid-template-columns: repeat(3,120px);
+        grid-template-rows: repeat(3,120px);
+    }
+
+    footer{
+
+        .panel_footer{
+            font-size: 1.2rem;
+
+            h6{
+                margin-bottom: 1rem;
+            }   
+            .social_media{
+                a{
+                    img{
+                        width: 30px;
+                        height: 30px;
+                    }
+                }
+        }   }
+    }
+
+    .grid_shop{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        align-items: center;
+        .shop_item{
+            width: 300px;
+            height: 300px;
+            img{
+                width: 70%;
+                height: 50%;
+            } 
+        }
+        .cardtwo{
+            img{
+                width: 50%;
+            }
+        }
+        .cardfour{ 
+            grid-area: cardfour;
+            img{
+                margin-bottom: 0rem;
+            }
+        }
+    }
+    .panel_sConsulta{
+        width: 80%;
+        margin: 0rem 1rem 20rem 2.5rem;
+        flex-wrap: nowrap;
+        flex-direction: column;
+        justify-content: center;
+        font-size: 0.8rem;
+        padding-left: 1rem;
+        #comentsService{
+            width: 19rem;
+        }
+    }
+    .box_shopCart{
+        flex-direction: column;
+        .panel_shopCart{
+            width: 100%;
+            
         }
     }
 }
