--- a/SASS/layout/_header.scss
+++ b/SASS/layout/_header.scss
@@ -2,6 +2,7 @@ header{
     background-color: rgb(109, 78, 194);
     position: sticky;
     top: 0;
+    width: 100%;
     height: 6rem;
     z-index: 1;
     border-bottom: 0.2rem solid;
