--- a/SASS/components/_media.scss
+++ b/SASS/components/_media.scss
@@ -16,13 +16,16 @@
     font-family: 'Josefin Sans', sans-serif;
     font-family: 'Open Sans', sans-serif;
     height: 20rem;
-    width: 70rem;
+    width: 70%;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     align-content: center;
-    justify-content: space-around;
-    align-items: normal;
-    margin: 10rem 20rem 10rem 24rem;
+    justify-content: center;
+    align-items: center;
+    margin-left: 15%;
+    margin-right: 10%;
+    margin-top: 10rem;
+    margin-bottom: 10rem;
     border-radius: 12px;
     background-color: $coloruno;
     box-shadow:0px 4px 4px $colordos;
